--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bufferutil": "^4.0.3",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
-    "vue": "^2.6.11"
+    "utf-8-validate": "^5.0.4",
+    "vue": "^2.6.11",
+    "ws": "^7.4.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
