--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "node server.js"
+    "start": "vue-cli-service serve"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -45,6 +45,5 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ],
-  "proxy": "http://developer.amanabigbazar.com/"
+  ]
 }
