--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "node server/index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "bufferutil": "^4.0.3",
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
     "utf-8-validate": "^5.0.4",
