--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
-#PORT=5000
-#NODE_ENV=production
-#API_URL=http://developer.amanabigbazar.com
+PORT=5000
+NODE_ENV=production
+API_URL=http://developer.amanabigbazar.com
