--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "node server.js"
+    "start": "node server3.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "bufferutil": "^4.0.3",
+    "config": "^3.3.4",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.6",
     "morgan": "^1.10.0",
+    "requests": "^0.3.0",
     "serve-static": "^1.14.1",
     "utf-8-validate": "^5.0.4",
     "vue": "^2.6.11",
