--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.6",
     "morgan": "^1.10.0",
+    "request": "^2.88.2",
     "requests": "^0.3.0",
     "serve-static": "^1.14.1",
     "utf-8-validate": "^5.0.4",
